--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Cartitas Game</title>
     <link rel="stylesheet/css" href="styles.css" />
   </head>
+  <style></style>
   <body>
+    <section id="tablero"></section>
+    <div class="areaTarjeta">
+      <div class="tarjeta">
+        <div class="caraTrasera"></div>
+        <div class="caraSuperior"></div>
+      </div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
