--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cartitas Game</title>
-    <link rel="stylesheet/css" href="styles.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
   </head>
   <style>
     :root {
@@ -44,6 +48,11 @@
     .cara {
       position: absolute;
       backface-visibility: hidden;
+      box-shadow: inset 0 0 0 5px white;
+      font-size: 500%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .Trasera {
@@ -62,8 +71,10 @@
     <section id="tablero"></section>
     <div class="areaTarjeta">
       <div class="tarjeta">
-        <div class="cara Trasera"></div>
-        <div class="cara Superior"></div>
+        <div class="cara Trasera"><i class="fa-solid fa-dice-d6"></i></div>
+        <div class="cara Superior">
+          <i class="fa-solid fa-circle-question"></i>
+        </div>
       </div>
     </div>
 
