--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
       margin: 0;
       -webkit-perspective: 1000;
       background-color: powderblue;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
     }
 
     .areaTarjeta,
@@ -66,6 +73,14 @@
       background-color: orange;
       position: absolute;
     }
+
+    .nuevoJuego {
+      background-color: orange;
+      padding: 20px;
+      margin-top: 2em;
+      border-radius: 50px;
+      border: white 5px solid;
+    }
   </style>
   <body>
     <section id="tablero"></section>
@@ -78,6 +93,7 @@
       </div>
     </div>
 
+    <button class="nuevoJuego">Nuevo Juego</button>
     <script src="app.js"></script>
   </body>
 </html>
