--- a/index.html
+++ b/index.html
@@ -11,89 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
   </head>
-  <style>
-    :root {
-      --w: calc(70vw / 6);
-      --h: calc(70vw / 4);
-    }
-
-    * {
-      transition: all 0.5s;
-    }
-
-    body {
-      padding: 0;
-      margin: 0;
-      -webkit-perspective: 1000;
-      background-color: powderblue;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
-    }
-
-    .areaTarjeta,
-    .tarjeta,
-    .cara {
-      width: var(--w);
-      height: var(--h);
-      min-width: 80px;
-      max-width: fit-content;
-      padding-left: 2px;
-      margin-top: 3px;
-    }
-
-    .tarjeta {
-      position: relative;
-      transform-style: preserve-3d;
-    }
-
-    .areaTarjeta:hover .tarjeta {
-      transform: rotateY(180deg);
-    }
-
-    .cara {
-      position: absolute;
-      backface-visibility: hidden;
-      box-shadow: inset 0 0 0 5px white;
-      font-size: 500%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .Trasera {
-      background-color: lightcyan;
-      position: absolute;
-
-      transform: rotateY(180deg);
-    }
-
-    .Superior {
-      background-color: orange;
-      position: absolute;
-    }
-
-    .nuevoJuego {
-      background-color: orange;
-      padding: 20px;
-      margin-top: 2em;
-      border-radius: 50px;
-      border: white 5px solid;
-    }
-
-    .areaTarjeta {
-      float: left;
-    }
-
-    #tablero {
-      /* max-width: 80vh;
-      max-height: 80vh;*/
-    }
-  </style>
+  <style></style>
   <body>
     <section id="tablero"></section>
 
